--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ header {
     padding: 0px 10px;
     width: 100%;
     height: 3.6em;
-    background-color: white;
+    background-color: var(--white);
     margin-top: auto;
 }
 
@@ -116,37 +116,63 @@ header img {
     background-image: url("./Foto\'s\ website/Image-6.jpg");
            
 }
-.over-ons-info {
-    display: flex;
-    flex-wrap: wrap; 
-    flex-direction: row;
-    width: 750px;
+
+.over-ons-container {
+    display: grid;
+    height: 500px;
+    width: 1100px;
+    grid-template-columns: 1fr 2fr;
+    margin: 100px 0px 0px 220px;
 }
 
-.over-ons-img {
+.over-ons img {
+    background-size: cover;
     width: 350px;
-    height: 300px;   
-    background-image: url("./Foto\'s\ website/Image-4.jpg");
+    height: 300px;
+}
+
+.over-ons-info {
+    width: 650px;
+}
+
+.contact-container {
+    display: grid;
+    width: 1100px;
+    grid-template-columns: 2fr 1fr;
+    margin: 0px 0px 100px 220px;
 }
 
 .contact-info {
-    
-    display: flex;
-    flex-wrap: wrap; 
-    flex-direction: row;
-    width: 750px;
+    width: 650px;
 }
 
-.contact-img {
+.contact img {
+    background-size: cover;
     width: 350px;
     height: 300px;
-    background-image: url("./Foto\'s\ website/Image-2.jpg");
+}
+
+footer {
+    position: inherit;
+    bottom: 0;
+    padding: 0px auto;
+    width: 100%;
+    height: 5em;
+    background-color: var(--primary);
+    margin-top: auto;
+}
+
+.footer-width {
+    display: flex;
+    margin: auto;
+    padding: 10px;
+    max-width: 900px;
+    justify-content: space-between;
 }
 
 /* Over ons pagina */
 
 .over-ons-image {
     background-image: url("./Foto\'s\ website/Image-4.jpg");
-
 }
 
