--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ li {
     list-style: none;
 }
 
+.current {
+    border-bottom: 3px solid var(--primary);
+}
+
 header {
     position: fixed;
     top: 0;
@@ -80,6 +84,7 @@ header {
     height: 3.6em;
     background-color: var(--white);
     margin-top: auto;
+    border-bottom: 2px solid black;
 }
 
 .logo {
@@ -119,10 +124,10 @@ header img {
 
 .over-ons-container {
     display: grid;
-    height: 500px;
+    height: 450px;
     width: 1100px;
     grid-template-columns: 1fr 2fr;
-    margin: 100px 0px 0px 220px;
+    margin: 100px auto;
 }
 
 .over-ons img {
@@ -137,9 +142,11 @@ header img {
 
 .contact-container {
     display: grid;
-    width: 1100px;
+    height: 350px;
+    width: 1010px;
     grid-template-columns: 2fr 1fr;
-    margin: 0px 0px 100px 220px;
+    margin: auto;
+    margin-bottom: 100px;
 }
 
 .contact-info {
@@ -148,8 +155,21 @@ header img {
 
 .contact img {
     background-size: cover;
-    width: 350px;
-    height: 300px;
+    width: 340px;
+    height: 320px;
+}
+
+.button {
+    background-color: var(--primary);
+    height: 35px;
+    width: 110px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
+}
+
+.button:hover {
+    background-color: var(--prim-dark);
 }
 
 footer {
@@ -166,7 +186,7 @@ footer {
     display: flex;
     margin: auto;
     padding: 10px;
-    max-width: 900px;
+    max-width: 1025px;
     justify-content: space-between;
 }
 
@@ -176,3 +196,20 @@ footer {
     background-image: url("./Foto\'s\ website/Image-4.jpg");
 }
 
+footer {
+    position: inherit;
+    bottom: 0;
+    padding: 0px auto;
+    width: 100%;
+    height: 5em;
+    background-color: var(--primary);
+    margin-top: auto;
+}
+
+.footer-width {
+    display: flex;
+    margin: auto;
+    padding: 10px;
+    max-width: 1025px;
+    justify-content: space-between;
+}
