--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ li {
 }
 
 header {
+    z-index: 1;
     position: fixed;
     top: 0;
     padding: 0px 10px;
@@ -118,7 +119,7 @@ header img {
 
 .home-image {
     background-image: url("./Foto\'s-website/Image-6.jpg");
-           
+    filter: brightness(90%);
 }
 
 .over-ons-container {
@@ -208,151 +209,115 @@ footer {
 .footer-width p {
     margin: auto 0;
 }
-/*----------------------------------------------------------------*/
-@media only screen and (min-width: 600px) {
-    .current {
-        border-bottom: 3px solid var(--primary);
-    }
-    
+
+@media only screen and (max-width: 600px) {
     header {
-        position: fixed;
-        top: 0;
-        padding: 0px 10px;
-        width: 100%;
-        height: 3.6em;
-        background-color: var(--white);
-        margin-top: auto;
+        height: 4.3em;
     }
-    
-    .logo {
-        object-fit: cover;
-        display: inline-block;
-        margin-top: 2px;
-    }
-    
     
     header img {
-        height: 3.0em;
+        height: 3.7em;
     }
-    
-    
-    .header-width {
-        display: flex;
-        margin: auto;
-        max-width: 1100px;
-        justify-content: space-between;
-    }
-    
-    .hero-container {
-        display: flex;
-        background-position: center; 
-        background-size: cover;
-        width: 100%;
-        height: 400px;   
+
+    header nav ul {
         justify-content: center;
-        align-items: center;
+        margin-top: 0px;
     }
-    
-    
-    .home-image {
-        background-image: url("./Foto\'s-website/Image-6.jpg");
-               
+
+    .hero-container h1 {
+        font-size: 50px;
+        font-weight: 300;
     }
-    
+
     .over-ons-container {
-        display: grid;
-        max-width: 1000px;
-        grid-template-columns: 1fr 2fr;
+        display: flex;
+        flex-direction: column;
         margin: 50px auto;
-        gap: 25px;
+    }
+
+    .over-ons {
+        margin: 0 auto;
     }
     
     .over-ons img {
-        object-fit: cover;
-        width: 350px;
-        height: 300px;
+        width: 370px;
+        height: 235px;
     }
     
     .over-ons-info {
-        max-width: 800px;
+        margin: 0px 20px;
     }
     
     .over-ons-info h3 {
-        margin-left: 5px;
+        font-size: 30px;
+        margin-left: 0px;
     }
     
     .over-ons-info p {
-        margin-bottom: 25px;
+        margin: 30px 0px 50px 0px;
     }
     
     .contact-container {
-        display: grid;
-        max-width: 1000px;
-        grid-template-columns: 2fr 1fr;
+        display: flex;
+        flex-direction: column-reverse;
         margin: 50px auto;
         gap: 25px;
     }
     
     .contact-info {
-        max-width: 800px;
+        margin: 0px 20px;
     }
-    
+
+    .contact {
+        margin: 0px auto;
+    }
+
+    .contact img {
+        width: 370px;
+        height: 275px;
+    }
+
     .contact-info h3 {
-        margin-left: 5px;
+        font-size: 30px;
+        margin-left: 0px;
     }
     
     .contact-info p {
-        margin-bottom: 25px;
-    }
-    
-    .contact img {
-        object-fit: cover;
-        width: 340px;
-        height: 320px;
-    }
-    
-    .button {
-        background-color: var(--primary);
-        padding: 8px 30px;
-        border: 0;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
-        margin-top: 10px;
-    }
-    
-    .button:hover {
-        background-color: var(--prim-dark);
-        cursor: pointer;
+        margin: 30px 0px 50px 0px;
     }
     
     footer {
+        /*footer has space left at the bottom*/
+        display: flex;
         position: inherit;
         bottom: 0;
         padding: 0px;
         width: 100%;
-        height: 5em;
-        background-color: var(--primary);
-        margin-top: auto;
+        height: 7.5em;
     }
     
     .footer-width {
         display: flex;
-        margin: auto;
-        padding: 10px;
-        max-width: 1025px;
-        justify-content: space-between;
+        flex-direction: column-reverse;
+        flex-wrap: wrap;
+    }
+    
+    .footer-width nav {
+        margin-right: 25px;
     }
     
     .footer-width p {
+        display: flex;
+        justify-content: center;
         margin: auto 0;
     }    
 }
-/*----------------------------------------------------------------*/
 
 /* Over ons pagina */
 
 .over-ons-image {
     background-image: url("./Foto\'s\-website/Image-4.jpg");
+    filter: brightness(90%);
 }
 
 .info-over-ons {
@@ -407,37 +372,39 @@ footer {
     cursor: pointer;
     color: var(--primary);
 }
-/*----------------------------------------------------------------*/
-@media only screen and (min-width: 600px) {
-    .over-ons-image {
-        background-image: url("./Foto\'s\-website/Image-4.jpg");
-    }
-    
+
+@media only screen and (max-width: 600px) {
     .info-over-ons {
-        display: grid;
-        max-width: 1100px;
-        grid-template-columns: 3fr;
-        margin: 25px auto;
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+    }
+
+    .info-over-ons h2 {
+        margin: 30px 0px 10px 0px;
     }
     
+    .info-over-ons p {
+        margin-bottom: 0px;
+    }
+
     .example-image {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin: 0px 20px;
+        height: 300px;
     }
     
     .example-image img {
-        object-fit: cover;
-        width: 1000px;
-        height: 200px;
-        border: solid black 1px;
+        object-fit: fill;
+        width: 100%;
+        height: 300px;
     }
     
     .profile-container {
         display: flex;
-        max-width: 1100px;
-        gap: 120px;
-        margin: 75px auto;
+        flex-direction: column;
+        width: 90%;
+        gap: 70px;
+        margin: 20px auto 50px auto;
     }
     
     .profile-container img {
@@ -466,12 +433,12 @@ footer {
         color: var(--primary);
     }    
 }
-/*----------------------------------------------------------------*/
 
 /* Contact pagina */
 
 .contact-image {
     background-image: url("./Foto\'s\-website/Image-3.jpg");
+    filter: brightness(90%);
 }
 
 .contact-information {
@@ -508,12 +475,11 @@ footer {
     padding-left: 5px;
 }
 
-.textboxes {
-    display: flex;
-    flex-direction: column;
+.contactformulier form {
+    width: 100%;
 }
 
-.textboxes .name {
+.contactformulier .name {
     padding: 20px;
 }
 
@@ -559,7 +525,7 @@ footer {
     background-color: #f1f1f1;
 }
 
-.contactformulier #formulier {
+.contactformulier #textarea {
     margin: 10px 0px 25px 0px;
     border: 2px solid var(--primary);
     background-color: #f1f1f1;
@@ -570,23 +536,23 @@ footer {
     width: 450px;
 }
 /*----------------------------------------------------------------*/
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
     .contact-information {
-        display: grid;
-        grid-template-columns: 2fr 3fr;
-        gap: 100px;
-        max-width: 880px;
-        margin: 100px auto;
+        display: flex;
+        flex-direction: column;
+        margin: 50px 20px;
+        gap: 50px;
     }
-    
+
     .info h2 {
         border-bottom: 3px solid var(--primary);
+        width: 95%;
     }
     
     .adres,
     .telefoon,
     .mail {
-        margin-top: 20px;
+        margin-top: 10px;
     }
     
     .openingstijden {
@@ -605,12 +571,12 @@ footer {
         padding-left: 5px;
     }
     
-    .textboxes {
+    .contactformulier {
         display: flex;
         flex-direction: column;
     }
     
-    .textboxes .name {
+    .contactformulier .name {
         padding: 20px;
     }
     
@@ -619,52 +585,25 @@ footer {
         justify-content: flex-end;
     }
     
-    .validation-button {
-        background-color: var(--primary);
-        border: 0px;
-        border-radius: 5px;
-        height: 35px;
-        width: 160px;
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
-    }
-    
-    .validation-button:hover {
-        background-color: var(--prim-dark);
-        cursor: pointer;
-    }
-    
-    .contactformulier {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-    
     .contactformulier #name,
     .contactformulier #email,
     .contactformulier #phone {
-        width: 455px;
+        width: 360px;
     }
     
     .contactformulier label {
         font-size: 20px;
     }
-    
-    .contactformulier input {
-        font-size: 25px;
-        margin: 15px 0px 30px 0px;
-        border: 2px solid var(--primary);
+
+    .contactformulier textarea {
+        border-color: var(--primary);
         background-color: #f1f1f1;
+        width: 360px;
     }
-    
-    .contactformulier #formulier {
-        margin: 10px 0px 25px 0px;
-        border: 2px solid var(--primary);
-        background-color: #f1f1f1;
+
+    .send-button {
+        display: flex; 
+        justify-content: flex-end;
+        margin: 30px 10px 0px 0px;
     }
-    
-    .contactformulier .message {
-        height: 100px;
-        width: 450px;
-    }
-    
 }
