--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
 
 h1 {
-    font-family: 'lato', sans-serif;
+    font-family: "Lato", Arial, Helvetica, sans-serif;
     font-size: 80px;
     line-height: 1.05;
     color: var(--white);
@@ -19,7 +22,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'lato', sans-serif;
+    font-family: "Lato", Arial, Helvetica, sans-serif;
     font-size: 30px;
     line-height: 1.05;
     color: var(--text);
@@ -27,7 +30,7 @@ h2 {
 }
 
 h3 {
-    font-family: 'lato', sans-serif;
+    font-family: "Lato", Arial, Helvetica, sans-serif;
     font-size: 24px;
     line-height: 1.1;
     color: var(--text);
@@ -35,7 +38,6 @@ h3 {
 }
 
 p.large {
-    font-family: 'roboto', sans-serif;
     font-size: 18px;
     line-height: 1.6;
     margin: 0;
@@ -43,7 +45,6 @@ p.large {
 }
 
 p {
-    font-family: 'roboto', sans-serif;
     font-size: 14px;
     line-height: 1.6;
     color: var(--text);
@@ -51,7 +52,6 @@ p {
 }
 
 nav {
-    font-family: 'roboto', sans-serif;
     font-size: 18px;
     color: var(--text);
 }
@@ -71,11 +71,12 @@ li {
     margin: 0px 15px;
     list-style: none;
 }
+/*------------------------------------------------------------*/
 
 /*----home pagina----*/
 
 header {
-    position: fixed;
+    position: sticky;
     top: 0;
     padding: 0px 10px;
     width: 100%;
@@ -103,10 +104,14 @@ header img {
     justify-content: space-between;
 }
 
+.header-width li a {
+    font-weight: 600;
+}
+
 .current {
     border-bottom: 3px solid var(--primary);
 }
-/*------------------------------------------------------------*/
+
 .hero-container {
     display: flex;
     background-position: center; 
@@ -137,8 +142,7 @@ header img {
 }
 
 .over-ons-info {
-    max-height: 250px;
-    max-width: 800px;
+    width: 95%;
     margin-top: 10px;
 }
 
@@ -153,7 +157,6 @@ header img {
 .contact-container {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    justify-items: flex-end;
     max-width: 1100px;
     margin: 50px auto;
     gap: 30px;
@@ -161,8 +164,7 @@ header img {
 }
 
 .contact-info {
-    max-height: 250px;
-    max-width: 800px;
+    width: 95%;
     margin-top: 10px;
 }
 
@@ -196,26 +198,28 @@ header img {
 }
 
 footer {
-    position: inherit;
-    bottom: 0;
-    padding: 0px;
+    position: static;
+    font-weight: 600;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
     width: 100%;
-    height: 5em;
     background-color: var(--primary);
-    margin-top: auto;
 }
 
 .footer-width {
     display: flex;
     margin: auto;
-    padding: 10px;
+    padding: 0px;
     max-width: 1100px;
     justify-content: space-between;
+    align-items: center;
 }
 
 .footer-width p {
-    margin: auto 0;
+    font-size: 18px;
 }
+
 /*------------------------------------------------------------*/
 @media only screen and (max-width: 600px) {
     header .header-width ul {
@@ -233,10 +237,6 @@ footer {
         min-width: 380px;
     }
     
-    .over-ons-info {
-        max-height: 800px;
-    }
-    
     .over-ons-info h3 {
         margin: 5px 0px 0px 5px;
     }
@@ -252,10 +252,6 @@ footer {
         margin: 60px 15px;
     }
     
-    .contact-info {
-        max-height: 600px;
-    }
-    
     .contact-info h3 {
         margin-left: 5px;
     }
@@ -266,8 +262,8 @@ footer {
     
     .contact img {
         object-fit: cover;
-        min-height: 280px;
-        min-width: 380px;
+        height: 280px;
+        width: 380px;
     }
     
     .button {
@@ -285,21 +281,25 @@ footer {
     }
     
     footer {
+        height: 7em;
         margin-top: auto;
+        margin-bottom: 0px;
     }
     
     .footer-width {
         display: flex;
-        margin: 0;
-        padding: 10px;
-        max-width: 1100px;
-        justify-content: space-between;
+        flex-direction: column-reverse;
+        padding: 0;
+        align-items: center;
+        align-content: center;
+        margin: auto 0;
     }
     
-    .footer-width p {
-        margin: auto 0;
-    }    
+    .footer-width ul {
+        padding-left: 0px;
+    }
 }
+/*------------------------------------------------------------*/
 
 /*----Over ons pagina----*/
 
@@ -313,7 +313,6 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1100px;
-    height: 800px;
     margin: 0px auto;
     gap: 25px;
 }
@@ -333,7 +332,7 @@ footer {
 
 .example-image img {
     object-fit: cover;
-    width: 1000px;
+    width: 90%;
     height: 200px;
     border: solid black 1px;
 }
@@ -371,7 +370,7 @@ footer {
     color: var(--primary);
 }
 /*------------------------------------------------------------*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {    
     .info-over-ons {
         display: flex;
         flex-direction: column;
@@ -401,12 +400,12 @@ footer {
         display: flex;
         flex-direction: column;
         width: 90%;
-        gap: 70px;
+        gap: 50px;
         margin: 20px auto 50px auto;
     }
     
     .profile-container img {
-        max-width: 100%;
+        width: 100%;
     }
     
     .profile-info {
@@ -497,19 +496,12 @@ td {
 .contactformulier .name {
     padding: 20px;
 }
-
-.send-button {
+/*-----------------------------*/
+.validation-button {
     display: flex;
     justify-content: flex-end;
-    margin-top: 10px;
-}
-
-.validation-button {
+    align-items: center;
     background-color: var(--primary);
-    border: 0px;
-    border-radius: 5px;
-    height: 35px;
-    width: 160px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 3px 10px 0 rgba(0,0,0,0.19);
 }
 
@@ -517,7 +509,7 @@ td {
     background-color: var(--prim-dark);
     cursor: pointer;
 }
-
+/*-----------------------------*/
 .contactformulier form {
     display: flex;
     flex-direction: row;
